fixed text spacing while icon is not there

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2832,7 +2832,7 @@
 	font-size: 30px;
 }
 
-.elementor-social-icon-label {
+.ha-social-icons-wrapper a.elementor-social-icon-label {
 	color: #d30c5c;
 }
 
